version 0.9.13
 Bugfixes
 * default_encoding config option allows user to specify a default encoding other than ASCII (was a bug for some uses, namely cron jobs).
 * Appropriate intermediate directories are created during authentication token storage.

version 0.9.12
 Enhancements
 * Added support for Google Finance (thanks, bartosh!)
 * Improved flexibility of --date option.
 * Allow specification of date for added calendar events.
 * Added --access option for Picasa, Blogger, and YouTube creation tasks.
 * Improved and expanded list fields for youtube, picasa, and blogger.
 * Added --photo option to specify names of photos in Picasa to operate on.
 * Added --yes option to automatically delete files, instead of asking for confirmation.
 * impatient_editors config file option can stop programs like openoffice.org from exiting immediately during docs edit command.
 * Take input from stdin (allow piping to GoogleCL).

 Bugfixes
 * --editor option for Docs can take flags and options.
 * max_retries and retry_delay configuration options help combat some server errors.
 * Enable downloading drawings.
 * Don't save user account to config file as a default if authentication failed.

version 0.9.11
 Enhancements
 * Added --src and --dest options to allow specifying data sources and download destinations respectively.
 * Enabled fully positional command line arguments (e.g. "google docs get my_doc .")
 * Add command line arguments to --title option to form list of titles to delete/list/download
 * Added list fields for picasa list (see README.new-usage). Thanks ferranb!

 Bugfixes
 * (more certainly) enabled unicode support
 * Create missing intermediate folders when saving config file and/or data files.
 * Uploads to Docs correctly parse filenames with multiple '.' characters.
 * Verbosity of output settable in interactive mode.

version 0.9.10
 Enhancements
 * Follow XDG Base Directory Specification.