@@ -35,7 +35,7 @@ Each of these values can be found in any section. The service being run will try
   * invalid_filename_character_sub: [<string>] String to replace invalid filename characters with when editing or downloading documents.  For example, if this is set to !, downloading the file "unfriendly/filename" will rename the file to "unfriendly!filename".  Note that for editing, only the temporary file's name is changed -- it should remain the same online.
 
 1.4 General
-  * auth_browser: [<browser>], Browser to launch when authenticating the OAuth request token. Set this to "disabled" to prevent the launch of any browsers.
+  * auth_browser: [<browser>], Browser to launch when authenticating the OAuth request token. Set this to "disabled" or "none" to prevent the launch of any browsers.
   * date_print_format: [<format string>], Format to use when printing date information. See the Python "time" documentation for formats (http://docs.python.org/library/time.html#time.strftime). For example: "%m %d at %H" for "<month> <day> at <hour>"
   * default_encoding: [<encoding>], If the terminal encoding is undefined, use this encoding. Odds are, if you are having unicode/ascii decode/encode issues, you'll need to use this setting (almost always 'utf-8' for non-windows users).
   * missing_field_value: [<string>], Placeholder string to use when listing an invalid attribute, for example, the url of a contact.
